# spdlog

./: 3RDPARTYLICENSES.TXT  LICENSE  README.md  meson.build  meson_options.txt  spdlog-1.7.0.wrap  spdlog.wrap
example/: meson.build
src/: meson.build
tests/: meson.build
